1 Compiler/version2/Compiler/src/main/java/antl/gggggParser.java
// $ANTLR 3.5.1 D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g 2014-02-16 18:44:46

package antl;


import org.antlr.runtime.*;

import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;

import java.util.HashMap;

@SuppressWarnings ("all")
public class gggggParser extends Parser {
    public static final String[] tokenNames = new String[]{
            "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CLEAR_LINE", "COMMENT", "DEDENT",
            "ELSE", "ENDL", "FLOAT", "FOR", "FUNCTION", "ID", "IF", "INDENT", "INT",
            "MAIN", "STRING", "TAB", "WHILE", "WS", "'!='", "'%'", "'*'", "'+'", "','",
            "'-'", "'/'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'Alin'", "'Alout'",
            "'['", "']'", "'^'", "'float'", "'int'", "'return'"
    };
    public static final int EOF = -1;
    public static final int T__21 = 21;
    public static final int T__22 = 22;
    public static final int T__23 = 23;
    public static final int T__24 = 24;
    public static final int T__25 = 25;
    public static final int T__26 = 26;
    public static final int T__27 = 27;
    public static final int T__28 = 28;
    public static final int T__29 = 29;
    public static final int T__30 = 30;
    public static final int T__31 = 31;
    public static final int T__32 = 32;
    public static final int T__33 = 33;
    public static final int T__34 = 34;
    public static final int T__35 = 35;
    public static final int T__36 = 36;
    public static final int T__37 = 37;
    public static final int T__38 = 38;
    public static final int T__39 = 39;
    public static final int T__40 = 40;
    public static final int T__41 = 41;
    public static final int CLEAR_LINE = 4;
    public static final int COMMENT = 5;
    public static final int DEDENT = 6;
    public static final int ELSE = 7;
    public static final int ENDL = 8;
    public static final int FLOAT = 9;
    public static final int FOR = 10;
    public static final int FUNCTION = 11;
    public static final int ID = 12;
    public static final int IF = 13;
    public static final int INDENT = 14;
    public static final int INT = 15;
    public static final int MAIN = 16;
    public static final int STRING = 17;
    public static final int TAB = 18;
    public static final int WHILE = 19;
    public static final int WS = 20;

    // delegates
    public Parser[] getDelegates () {
        return new Parser[]{};
    }

    // delegators


    public gggggParser (TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public gggggParser (TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    protected StringTemplateGroup templateLib =
            new StringTemplateGroup("gggggParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib (StringTemplateGroup templateLib) {
        this.templateLib = templateLib;
    }

    public StringTemplateGroup getTemplateLib () {
        return templateLib;
    }

    /**
     * allows convenient multi-value initialization:
     * "new STAttrMap().put(...).put(...)"
     */
    @SuppressWarnings ("serial")
    public static class STAttrMap extends HashMap<String, Object> {
        public STAttrMap put (String attrName, Object value) {
            super.put(attrName, value);
            return this;
        }
    }

    @Override
    public String[] getTokenNames () {
        return gggggParser.tokenNames;
    }

    @Override
    public String getGrammarFileName () {
        return "D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g";
    }


    AllDescTable table = new AllDescTable();


    public static class program_return extends ParserRuleReturnScope {
        public StringTemplate st;

        public Object getTemplate () {
            return st;
        }

        public String toString () {
            return st == null ? null : st.toString();
        }
    }

    ;


    // $ANTLR start "program"
    // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:62:1: program : ( globalsVar | function | main )+ ;
    public final gggggParser.program_return program () throws RecognitionException {
        gggggParser.program_return retval = new gggggParser.program_return();
        retval.start = input.LT(1);

        ParserRuleReturnScope globalsVar1 = null;
        ParserRuleReturnScope function2 = null;
        ParserRuleReturnScope main3 = null;


        int stageProg = 0;

        try {
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:66:3: ( ( globalsVar | function | main )+ )
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:67:6: ( globalsVar | function | main )+
            {
                // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:67:6: ( globalsVar | function | main )+
                int cnt1 = 0;
                loop1:
                while (true) {
                    int alt1 = 4;
                    switch (input.LA(1)) {
                        case ID: {
                            alt1 = 1;
                        }
                        break;
                        case FUNCTION: {
                            alt1 = 2;
                        }
                        break;
                        case MAIN: {
                            alt1 = 3;
                        }
                        break;
                    }
                    switch (alt1) {
                        case 1:
                            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:67:7: globalsVar
                        {
                            pushFollow(FOLLOW_globalsVar_in_program94);
                            globalsVar1 = globalsVar();
                            state._fsp--;

                            if (stageProg <= 1) {
                                stageProg = 1;
                            } else {
                                Errors.WrongStageVar((globalsVar1 != null ? ((gggggParser.globalsVar_return) globalsVar1).varline : 0));
                            }
                        }
                        break;
                        case 2:
                            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:68:8: function
                        {
                            pushFollow(FOLLOW_function_in_program106);
                            function2 = function();
                            state._fsp--;

                            if (stageProg <= 2) {
                                stageProg = 2;
                            } else {
                                Errors.WrongStageFun((function2 != null ? ((gggggParser.function_return) function2).funline : 0));
                            }
                        }
                        break;
                        case 3:
                            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:69:8: main
                        {
                            pushFollow(FOLLOW_main_in_program117);
                            main3 = main();
                            state._fsp--;

                            if (stageProg <= 3) {
                                stageProg = 3;
                            } else {
                                Errors.WrongStageMain((main3 != null ? ((gggggParser.main_return) main3).mainline : 0));
                            }
                        }
                        break;

                        default:
                            if (cnt1 >= 1) break loop1;
                            EarlyExitException eee = new EarlyExitException(1, input);
                            throw eee;
                    }
                    cnt1++;
                }

            }

            retval.stop = input.LT(-1);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class globalsVar_return extends ParserRuleReturnScope {
        public int varline;
        public StringTemplate st;

        public Object getTemplate () {
            return st;
        }

        public String toString () {
            return st == null ? null : st.toString();
        }
    }

    ;


    // $ANTLR start "globalsVar"
    // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:73:1: globalsVar returns [int varline] : assignOp l= ';' ENDL ;
    public final gggggParser.globalsVar_return globalsVar () throws RecognitionException {
        gggggParser.globalsVar_return retval = new gggggParser.globalsVar_return();
        retval.start = input.LT(1);

        Token l = null;

        try {
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:75:3: ( assignOp l= ';' ENDL )
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:75:5: assignOp l= ';' ENDL
            {
                pushFollow(FOLLOW_assignOp_in_globalsVar143);
                assignOp();
                state._fsp--;

                l = (Token) match(input, DEDENT, FOLLOW_DEDENT_in_globalsVar147);
                retval.varline = (l != null ? l.getLine() : 0);
                match(input, ENDL, FOLLOW_ENDL_in_globalsVar151);
            }

            retval.stop = input.LT(-1);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "globalsVar"


    public static class function_return extends ParserRuleReturnScope {
        public int funline;
        public StringTemplate st;

        public Object getTemplate () {
            return st;
        }

        public String toString () {
            return st == null ? null : st.toString();
        }
    }

    ;


    // $ANTLR start "function"
    // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:78:1: function returns [int funline] : functionHeader block CLEAR_LINE ;
    public final gggggParser.function_return function () throws RecognitionException {
        gggggParser.function_return retval = new gggggParser.function_return();
        retval.start = input.LT(1);

        ParserRuleReturnScope functionHeader4 = null;
        ParserRuleReturnScope block5 = null;

        try {
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:83:2: ( functionHeader block CLEAR_LINE )
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:83:4: functionHeader block CLEAR_LINE
            {
                pushFollow(FOLLOW_functionHeader_in_function171);
                functionHeader4 = functionHeader();
                state._fsp--;

                retval.funline = (functionHeader4 != null ? ((gggggParser.functionHeader_return) functionHeader4).funline : 0);
                pushFollow(FOLLOW_block_in_function178);
                block5 = block();
                state._fsp--;

                table.checkReturnable((block5 != null ? ((gggggParser.block_return) block5).hasLastRet : false), (functionHeader4 != null ? ((gggggParser.functionHeader_return) functionHeader4).funline : 0));
                match(input, CLEAR_LINE, FOLLOW_CLEAR_LINE_in_function182);
            }

            retval.stop = input.LT(-1);


            table.clearCurFun();

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "function"


    public static class functionHeader_return extends ParserRuleReturnScope {
        public int funline;
        public StringTemplate st;

        public Object getTemplate () {
            return st;
        }

        public String toString () {
            return st == null ? null : st.toString();
        }
    }

    ;


    // $ANTLR start "functionHeader"
    // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:87:1: functionHeader returns [int funline] : FUNCTION id= ID '[' formalArgsList ']' ;
    public final gggggParser.functionHeader_return functionHeader () throws RecognitionException {
        gggggParser.functionHeader_return retval = new gggggParser.functionHeader_return();
        retval.start = input.LT(1);

        Token id = null;

        try {
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:89:3: ( FUNCTION id= ID '[' formalArgsList ']' )
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:89:5: FUNCTION id= ID '[' formalArgsList ']'
            {
                match(input, FUNCTION, FOLLOW_FUNCTION_in_functionHeader198);
                id = (Token) match(input, ID, FOLLOW_ID_in_functionHeader202);
                table.defineFun((id != null ? id.getText() : null), (id != null ? id.getLine() : 0));
                retval.funline = (id != null ? id.getLine() : 0);
                match(input, 36, FOLLOW_36_in_functionHeader206);
                pushFollow(FOLLOW_formalArgsList_in_functionHeader208);
                formalArgsList();
                state._fsp--;

                match(input, 37, FOLLOW_37_in_functionHeader210);
            }

            retval.stop = input.LT(-1);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "functionHeader"


    public static class formalArgsList_return extends ParserRuleReturnScope {
        public StringTemplate st;

        public Object getTemplate () {
            return st;
        }

        public String toString () {
            return st == null ? null : st.toString();
        }
    }

    ;


    // $ANTLR start "formalArgsList"
    // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:92:1: formalArgsList : (id= ID ( ',' idi= ID )* )? ;
    public final gggggParser.formalArgsList_return formalArgsList () throws RecognitionException {
        gggggParser.formalArgsList_return retval = new gggggParser.formalArgsList_return();
        retval.start = input.LT(1);

        Token id = null;
        Token idi = null;

        try {
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:93:3: ( (id= ID ( ',' idi= ID )* )? )
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:93:5: (id= ID ( ',' idi= ID )* )?
            {
                // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:93:5: (id= ID ( ',' idi= ID )* )?
                int alt3 = 2;
                int LA3_0 = input.LA(1);
                if ((LA3_0 == ID)) {
                    alt3 = 1;
                }
                switch (alt3) {
                    case 1:
                        // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:93:6: id= ID ( ',' idi= ID )*
                    {
                        id = (Token) match(input, ID, FOLLOW_ID_in_formalArgsList232);
                        table.addParametr((id != null ? id.getText() : null), (id != null ? id.getLine() : 0));
                        // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:93:51: ( ',' idi= ID )*
                        loop2:
                        while (true) {
                            int alt2 = 2;
                            int LA2_0 = input.LA(1);
                            if ((LA2_0 == 25)) {
                                alt2 = 1;
                            }

                            switch (alt2) {
                                case 1:
                                    // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:93:52: ',' idi= ID
                                {
                                    match(input, 25, FOLLOW_25_in_formalArgsList236);
                                    idi = (Token) match(input, ID, FOLLOW_ID_in_formalArgsList240);
                                    table.addParametr((idi != null ? idi.getText() : null), (idi != null ? idi.getLine() : 0));
                                }
                                break;

                                default:
                                    break loop2;
                            }
                        }

                    }
                    break;

                }

            }

            retval.stop = input.LT(-1);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "formalArgsList"


    public static class main_return extends ParserRuleReturnScope {
        public int mainline;
        public StringTemplate st;

        public Object getTemplate () {
            return st;
        }

        public String toString () {
            return st == null ? null : st.toString();
        }
    }

    ;


    // $ANTLR start "main"
    // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:96:1: main returns [int mainline] : MAIN block CLEAR_LINE ;
    public final gggggParser.main_return main () throws RecognitionException {
        gggggParser.main_return retval = new gggggParser.main_return();
        retval.start = input.LT(1);

        Token MAIN6 = null;


        table.defineCurFun(table.MAIN_NAME);

        try {
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:104:2: ( MAIN block CLEAR_LINE )
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:104:4: MAIN block CLEAR_LINE
            {
                MAIN6 = (Token) match(input, MAIN, FOLLOW_MAIN_in_main277);
                retval.mainline = (MAIN6 != null ? MAIN6.getLine() : 0);
                pushFollow(FOLLOW_block_in_main281);
                block();
                state._fsp--;

                match(input, CLEAR_LINE, FOLLOW_CLEAR_LINE_in_main283);
            }

            retval.stop = input.LT(-1);


            table.clearCurFun();

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "main"


    protected static class block_scope {
        List stmts;
    }

    protected Stack<block_scope> block_stack = new Stack<block_scope>();

    public static class block_return extends ParserRuleReturnScope {
        public List blocks;
        public boolean hasLastRet;
        public StringTemplate st;

        public Object getTemplate () {
            return st;
        }

        public String toString () {
            return st == null ? null : st.toString();
        }
    }

    ;


    // $ANTLR start "block"
    // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:107:10: fragment block returns [List blocks, boolean hasLastRet] : ENDL INDENT ( codeBlock )+ DEDENT ;
    public final gggggParser.block_return block () throws RecognitionException {
        block_stack.push(new block_scope());
        gggggParser.block_return retval = new gggggParser.block_return();
        retval.start = input.LT(1);

        ParserRuleReturnScope codeBlock7 = null;


        block_stack.peek().stmts = new ArrayList();
        retval.blocks = new ArrayList();
        boolean isRet = false;
        boolean isPrevIf = false;
        boolean isIfRet = false;

        try {
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:118:3: ( ENDL INDENT ( codeBlock )+ DEDENT )
            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:118:7: ENDL INDENT ( codeBlock )+ DEDENT
            {
                match(input, ENDL, FOLLOW_ENDL_in_block322);
                match(input, INDENT, FOLLOW_INDENT_in_block324);
                // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:119:7: ( codeBlock )+
                int cnt4 = 0;
                loop4:
                while (true) {
                    int alt4 = 2;
                    int LA4_0 = input.LA(1);
                    if ((LA4_0 == ELSE || LA4_0 == FOR || (LA4_0 >= ID && LA4_0 <= IF) || LA4_0 == WHILE || (LA4_0 >= 34 && LA4_0 <= 35) || LA4_0 == 41)) {
                        alt4 = 1;
                    }

                    switch (alt4) {
                        case 1:
                            // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:119:8: codeBlock
                        {
                            pushFollow(FOLLOW_codeBlock_in_block334);
                            codeBlock7 = codeBlock();
                            state._fsp--;


                            if (!isPrevIf && (codeBlock7 != null ? ((gggggParser.codeBlock_return) codeBlock7).isElse : false))
                                Errors.WrongIfElse((codeBlock7 != null ? ((gggggParser.codeBlock_return) codeBlock7).line : 0));
                            if (isRet && !isPrevIf)
                                Errors.BadAfterRet((codeBlock7 != null ? ((gggggParser.codeBlock_return) codeBlock7).line : 0));
                            if ((codeBlock7 != null ? ((gggggParser.codeBlock_return) codeBlock7).isRet : false) && ((!(codeBlock7 != null ? ((gggggParser.codeBlock_return) codeBlock7).isIf : false) && !(codeBlock7 != null ? ((gggggParser.codeBlock_return) codeBlock7).isElse : false)) || ((codeBlock7 != null ? ((gggggParser.codeBlock_return) codeBlock7).isElse : false) && isIfRet))) {
                                isRet = true;
                                table.setFunReturnable();
                            }
                            isPrevIf = (codeBlock7 != null ? ((gggggParser.codeBlock_return) codeBlock7).isIf : false);
                            if ((codeBlock7 != null ? ((gggggParser.codeBlock_return) codeBlock7).isIf : false))
                                isIfRet = (codeBlock7 != null ? ((gggggParser.codeBlock_return) codeBlock7).isRet : false);

                        }
                        break;

                        default:
                            if (cnt4 >= 1) break loop4;
                            EarlyExitException eee = new EarlyExitException(4, input);
                            throw eee;
                    }
                    cnt4++;
                }

                retval.hasLastRet = (codeBlock7 != null ? ((gggggParser.codeBlock_return) codeBlock7).isRet : false);
                match(input, DEDENT, FOLLOW_DEDENT_in_block370);
            }

            retval.stop = input.LT(-1);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
        } finally {
            // do for sure before leaving
            block_stack.pop();
        }
        return retval;
    }
    // $ANTLR end "block"


    public static class codeBlock_return extends ParserRuleReturnScope {
        public boolean isRet;
        public int line;
        public boolean isIf;
        public boolean isElse;
        public StringTemplate st;

        public Object getTemplate () {
            return st;
        }

        public String toString () {
            return st == null ? null : st.toString();
        }
    }

    ;


    // $ANTLR start "codeBlock"
    // D:\\ACTIVITY\\study\\3season\\issue2\\ЯПИС\\1 Compiler\\version1\\Compiler\\src\\main\\java\\antl\\ggggg.g:132:1: codeBlock returns [boolean isRet, int line, boolean isIf, boolean isElse] : ( assignOp l= ';' | functionCall l= ';' | ifOp | whileOp | forOp | elseOp | returnOp l= ';' | inOp l= ';' | outOp l= ';' ) ( ENDL |) ;
    public final gggggParser.codeBlock_return codeBlock () throws RecognitionException {
        gggggParser.codeBlock_return retval = new gggggParser.codeBlock_return();
        retval.start = input.LT(1);
